--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,14 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme inline{
+  --color-primary-500: #00BFFF;
+  --color-black-normal: #060606;
+  --color-black-lighter: #8F8F8F;
+  --color-black-lighter-active: #5D5D5D;
+  --color-customGray-50:#E8E8E8;
+  --color-customGray-100:#B7B7B7;
+  --color-customGray-200:#949494;
+  --color-customGray-300:#646464;
+  --color-customGray-400:#454545;
+  --shadow-custom:-5px 6px 0 1.5px #ffffff;
 }
